[project]
name = "picktestapp"
version = "0.1.0"
description = "Test application on FastApi for Pik recruitment"
authors = [
    {name = "Nikita",email = "ermafin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "geojson (>=3.2.0,<4.0.0)",
    "gspread (==6.0.2)",
    "gspread-asyncio (==2.0.0)",
    "alembic (>=1.16.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
black = "^25.1.0"

